app/assets/stylesheets/bloak/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

body {
  font-size: 15px;
  background-color: #f6f8fa;
}

a {
  text-decoration: none;
}

.fs-7 {
  font-size: 14px;
}

.fs-8 {
  font-size: 12px;
  font-weight: 300;
}

.ml-1 {
  margin-left: 0.5rem !important;
}

.py-10 {
  padding-top: 5rem !important;
  padding-bottom: 5rem !important;
}

td {
  vertical-align: baseline;
}

main.admin {
  display: flex;
  flex-wrap: nowrap;
  height: 100vh;
  height: -webkit-fill-available;
  max-height: 100vh;
  overflow-x: auto;
  overflow-y: hidden;
}

input[type="date"] {
  display: block;

  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  max-height: 2.4em;
}

.navbar-fixed-top {
  padding-top: calc(60px + 1rem - 4px);
}

.navbar {
  border-bottom: 4px solid #f2f2f2;
}

.nav-link.active {
  color: white !important;
}

.admin-cover-image-preview {
  height: 30px;
}

.feature-cover-image {
  height: 190px;
}

